Fix some resource leaks